--- a/notebooks/1_exploratory_data_analysis.ipynb
+++ b/notebooks/1_exploratory_data_analysis.ipynb
@@ -1960,8 +1960,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ml.loc[:, \"log_PM10_Counts\"] = np.log(df.loc[:, \"PM10_Counts\"])\n",
-    "df_ml.loc[:, \"log_PM25_Counts\"] = np.log(df.loc[:, \"PM25_Counts\"])"
+    "df_ml.loc[:, \"log_PM10_Counts\"] = np.log1p(df.loc[:, \"PM10_Counts\"])\n",
+    "df_ml.loc[:, \"log_PM25_Counts\"] = np.log1p(df.loc[:, \"PM25_Counts\"])"
    ]
   },
   {
@@ -2022,8 +2022,8 @@
        "      <td>1</td>\n",
        "      <td>30.0</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>3.401197</td>\n",
-       "      <td>2.397895</td>\n",
+       "      <td>3.433987</td>\n",
+       "      <td>2.484907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2039,8 +2039,8 @@
        "      <td>1</td>\n",
        "      <td>29.0</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>3.367296</td>\n",
-       "      <td>2.564949</td>\n",
+       "      <td>3.401197</td>\n",
+       "      <td>2.639057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2056,8 +2056,8 @@
        "      <td>1</td>\n",
        "      <td>29.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>3.367296</td>\n",
-       "      <td>2.484907</td>\n",
+       "      <td>3.401197</td>\n",
+       "      <td>2.564949</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2075,14 +2075,14 @@
        "2           290.0         42.0        1010.7          2.0   \n",
        "\n",
        "   lowest_ceiling(100m)  month  PM10_Counts  PM25_Counts  log_PM10_Counts  \\\n",
-       "0                  12.0      1         30.0         11.0         3.401197   \n",
-       "1                  12.0      1         29.0         13.0         3.367296   \n",
-       "2                  12.0      1         29.0         12.0         3.367296   \n",
+       "0                  12.0      1         30.0         11.0         3.433987   \n",
+       "1                  12.0      1         29.0         13.0         3.401197   \n",
+       "2                  12.0      1         29.0         12.0         3.401197   \n",
        "\n",
        "   log_PM25_Counts  \n",
-       "0         2.397895  \n",
-       "1         2.564949  \n",
-       "2         2.484907  "
+       "0         2.484907  \n",
+       "1         2.639057  \n",
+       "2         2.564949  "
       ]
      },
      "execution_count": 30,
