Adds script to notebooks and updates README

--- a/notebooks/0_data_preprocessing.ipynb
+++ b/notebooks/0_data_preprocessing.ipynb
@@ -175,6 +175,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e3a02a4-6f14-4a02-961a-42d396ea4b16",
+   "metadata": {},
+   "source": [
+    "`PM10_Counts` and `PM25_Counts` are densities of particulate matter less than 10um and 2.5um in microgram/cubic meter, respectively. The density of PM2.5 was written as `PM25_Counts` on purpose since the dot in the middle of feature name can cause unwanted results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "332d0663-5bb7-458d-97d1-9e7c56afc7aa",
