--- a/notebooks/1_exploratory_data_analysis.ipynb
+++ b/notebooks/1_exploratory_data_analysis.ipynb
@@ -244,6 +244,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1d82176-ffc4-4308-af2a-7b37d4853411",
+   "metadata": {},
+   "source": [
+    "`precipitation(mm)` was `null` if there was no precipitation. The `null`s in `precipitation(mm)` were replaced with zero. Other features were imputed using `bfill` followed by `ffill` since the weather parameters tend to change gradually."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "fc9d3ecc-9e32-4a2a-891f-0e6aeefcc17d",
@@ -491,6 +499,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3131b820-b5af-4f19-92db-9d15db8ffa8d",
+   "metadata": {},
+   "source": [
+    "`PM10_Counts` and `PM25_Counts` seemed to be correlated to each other, since they exhibited similar patterns of peaks and valleys."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "fb323bb7-077e-4b6d-8932-164fb9d6897c",
@@ -528,6 +544,14 @@
     "fig.tight_layout()\n",
     "plt.show();\n",
     "fig.savefig(\"../img/fine_dust_all_history.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43e632e5-502b-4267-b8be-03ca059f9493",
+   "metadata": {},
+   "source": [
+    "`wind_direction`, `wind_speed`, and `local_P(hPa)` showed a positive correlation with the particle density, whereas `temp(°C)`, `precipitation(mm)`, `humidity(%)`, `vapor_P(hPa)`, `dew_point_temp(°C)`, and `cloud_cover` showed a negative correlation.  Among the parameters, the `wind_direction` showed the strongest correlation with the particle density."
    ]
   },
   {
@@ -603,6 +627,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3e5eb66-0679-4e72-a95b-082b21dc823e",
+   "metadata": {},
+   "source": [
+    "When the fine dust counts were aggregated over years, it was difficult to find patterns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2db2198e-f8e6-49b5-aed8-2b29394d3427",
    "metadata": {},
    "source": [
@@ -670,6 +702,14 @@
     "fig.tight_layout()\n",
     "plt.show();\n",
     "fig.savefig(\"../img/fine_dust_monthly.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d416bcd-7e2f-47fb-b9b4-551cf5495b1e",
+   "metadata": {},
+   "source": [
+    "When the fine dust counts were aggregated over months, `wind_direction`, `wind_speed`, and `local_P(hPa)` showed a positive correlation with the counts, whereas `temp(°C)`, `precipitation(mm)`, `humidity(%)`, `vapor_P(hPa)`, `dew_point_temp(°C)`, and `cloud_cover` showed a negative correlation."
    ]
   },
   {
@@ -1293,6 +1333,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7a87482c-ed80-4068-b5db-8cd133cb53fc",
+   "metadata": {},
+   "source": [
+    "`temp(°C)` showed strong collinearity with `vapor_P(hPa)`, `dew_point_temp(°C)` and `local_P(hPa)`. Among these 4 parameters, only `temp(°C)` was used as a feature."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4cafc404-7be2-4424-905c-3584587f542b",
    "metadata": {},
    "source": [
@@ -1408,6 +1456,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "865067f6-8950-4bb5-bcf3-432164a02363",
+   "metadata": {},
+   "source": [
+    "`precipitation(mm)` showed a highly skewed distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "4a1d40cd-6059-4b82-a1aa-551541e38f1f",
@@ -1495,6 +1551,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54414564-d372-45ea-ad81-59d5f00da5a4",
+   "metadata": {},
+   "source": [
+    "`precipitation(mm)` didn't seem to be normally distributed even after log transformation, maybe because there were too many zeros in the data. `precipitation(mm)` was used as it was without log transformation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "627e4b3f-dd3f-4e26-a6c4-78f376bad0b9",
    "metadata": {},
    "source": [
@@ -1531,6 +1595,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbce8a29-87e1-4f6c-96c0-5e688e2d988a",
+   "metadata": {},
+   "source": [
+    "Both targets show highely skewed distribution."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "a5181fb4-c6a5-4541-ae13-1591ba432bf4",
@@ -1559,6 +1631,14 @@
     "plt.tight_layout()\n",
     "plt.show();\n",
     "fig.savefig(\"../img/target_after_log.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b70b511c-c8e2-4550-b9c5-572d4a02b18f",
+   "metadata": {},
+   "source": [
+    "The distribution of the targets were close to the normal distribution after log transformation. Therefore log-transformed targets were used during machine learning stage."
    ]
   },
   {
