--- a/notebooks/2_machine_learning.ipynb
+++ b/notebooks/2_machine_learning.ipynb
@@ -302,6 +302,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45b794b7-2f7d-4878-8af9-449f3b9a1bbb",
+   "metadata": {},
+   "source": [
+    "The data is in the form of timeseries, however the approach taken here is more of supervised learning. I didn't intentionally shuffle the data just to keep them in the format of timeseries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "010a8c56-e9a9-49d4-98fa-9f3850eb8cf5",
@@ -331,6 +339,14 @@
     "    columns=[\"PM10_Counts\", \"PM25_Counts\", \"log_PM10_Counts\", \"log_PM25_Counts\"]\n",
     ")\n",
     "y_test = test_df[\"log_PM10_Counts\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "129f28fb-e9f6-4f58-a8b9-4531fac83926",
+   "metadata": {},
+   "source": [
+    "Since `PM10_Counts` and `PM25_Counts` have similar trends, only `PM10_Counts` was used as target for simplicity."
    ]
   },
   {
@@ -697,6 +713,14 @@
    ],
    "source": [
     "pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a707c83-b2b8-4d0d-aab1-f27ba4402c42",
+   "metadata": {},
+   "source": [
+    "`LightGBM` and `CatBoost` performed best among the models tested. Considering the computation speed, `LightGBM` was mainly used for analysis in the subsequent notebooks."
    ]
   },
   {
