--- a/notebooks/5_Analysis.ipynb
+++ b/notebooks/5_Analysis.ipynb
@@ -428,7 +428,7 @@
    "id": "db9fc13d-a2c4-4d27-8385-19424b00a870",
    "metadata": {},
    "source": [
-    "The above graph shows the prediction by `LightGBM` model. According to the figure, it seemed that the prediction error got worse as the prediction was done on the later years."
+    "The above graph shows the prediction by the `LightGBM` model. According to the figure, there are two interesting observations to note. First, the predicted particle concentration was significantly higher than the actual `PM10_Counts` in 2020. This could be attributed to the outbreak of Covid-19, which led to lockdowns worldwide in 2020. Second, it appears that the prediction error worsened as the predictions were made for later years. This issue will be further investigated in the next section."
    ]
   },
   {
